// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebsiteConstruct synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"WebsiteHostedZoneD4FAEADF\\": {
      \\"Type\\": \\"AWS::Route53::HostedZone\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"HostedZoneConfig\\": {
          \\"Comment\\": \\"My nice website\\"
        }
      }
    },
    \\"WebsiteHostedZoneCaaAmazonF67E60BB\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"CAA\\",
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        },
        \\"ResourceRecords\\": [
          \\"0 issue \\\\\\"amazon.com\\\\\\"\\"
        ],
        \\"TTL\\": \\"1800\\"
      }
    },
    \\"WebsiteBucket4326D7C2\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"mydomain.com-website\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"WebsiteDistributionCFDistributionD4D90A52\\": {
      \\"Type\\": \\"AWS::CloudFront::Distribution\\",
      \\"Properties\\": {
        \\"DistributionConfig\\": {
          \\"CustomErrorResponses\\": [
            {
              \\"ErrorCachingMinTTL\\": 300,
              \\"ErrorCode\\": 403,
              \\"ResponseCode\\": 200,
              \\"ResponsePagePath\\": \\"/index.html\\"
            },
            {
              \\"ErrorCachingMinTTL\\": 300,
              \\"ErrorCode\\": 404,
              \\"ResponseCode\\": 200,
              \\"ResponsePagePath\\": \\"/index.html\\"
            }
          ],
          \\"DefaultCacheBehavior\\": {
            \\"AllowedMethods\\": [
              \\"GET\\",
              \\"HEAD\\"
            ],
            \\"CachedMethods\\": [
              \\"GET\\",
              \\"HEAD\\"
            ],
            \\"Compress\\": true,
            \\"ForwardedValues\\": {
              \\"Cookies\\": {
                \\"Forward\\": \\"none\\"
              },
              \\"QueryString\\": false
            },
            \\"TargetOriginId\\": \\"origin1\\",
            \\"ViewerProtocolPolicy\\": \\"redirect-to-https\\"
          },
          \\"DefaultRootObject\\": \\"index.html\\",
          \\"Enabled\\": true,
          \\"HttpVersion\\": \\"http2\\",
          \\"IPV6Enabled\\": true,
          \\"Origins\\": [
            {
              \\"DomainName\\": {
                \\"Fn::GetAtt\\": [
                  \\"WebsiteBucket4326D7C2\\",
                  \\"RegionalDomainName\\"
                ]
              },
              \\"Id\\": \\"origin1\\",
              \\"S3OriginConfig\\": {}
            }
          ],
          \\"PriceClass\\": \\"PriceClass_All\\",
          \\"ViewerCertificate\\": {
            \\"CloudFrontDefaultCertificate\\": true
          }
        }
      }
    },
    \\"WebsiteA6C1FD492\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"A\\",
        \\"AliasTarget\\": {
          \\"DNSName\\": {
            \\"Fn::GetAtt\\": [
              \\"WebsiteDistributionCFDistributionD4D90A52\\",
              \\"DomainName\\"
            ]
          },
          \\"HostedZoneId\\": \\"Z2FDTNDATAQYW2\\"
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        }
      }
    },
    \\"WebsiteAAAAA3AA9709\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"AAAA\\",
        \\"AliasTarget\\": {
          \\"DNSName\\": {
            \\"Fn::GetAtt\\": [
              \\"WebsiteDistributionCFDistributionD4D90A52\\",
              \\"DomainName\\"
            ]
          },
          \\"HostedZoneId\\": \\"Z2FDTNDATAQYW2\\"
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        }
      }
    },
    \\"WebsiteWWWE5086576\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"www.mydomain.com.\\",
        \\"Type\\": \\"A\\",
        \\"AliasTarget\\": {
          \\"DNSName\\": {
            \\"Fn::GetAtt\\": [
              \\"WebsiteDistributionCFDistributionD4D90A52\\",
              \\"DomainName\\"
            ]
          },
          \\"HostedZoneId\\": \\"Z2FDTNDATAQYW2\\"
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        }
      }
    },
    \\"WebsiteMX1A2D5733\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"MX\\",
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        },
        \\"ResourceRecords\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"10 inbound-smtp.\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\".amazonaws.com\\"
              ]
            ]
          }
        ],
        \\"TTL\\": \\"1800\\"
      }
    },
    \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"WebsiteVerifyDomainFunctionServiceRoleDefaultPolicy90A097B8\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"acm:DescribeCertificate\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:VerifyDomainIdentity\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:VerifyDomainDkim\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:GetIdentityVerificationAttributes\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:GetIdentityDkimAttributes\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:DeleteIdentity\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"route53:ChangeResourceRecordSets\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:aws:route53:::hostedzone/\\",
                    {
                      \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
                    }
                  ]
                ]
              }
            },
            {
              \\"Action\\": \\"route53:GetChange\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:aws:route53:::hostedzone/\\",
                    {
                      \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
                    }
                  ]
                ]
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"WebsiteVerifyDomainFunctionServiceRoleDefaultPolicy90A097B8\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\"
          }
        ]
      }
    },
    \\"WebsiteVerifyDomainFunction9978DE02\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3Bucket383C9EC7\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3VersionKeyC0FEDEB4\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3VersionKeyC0FEDEB4\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.verifyDomain\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs8.10\\",
        \\"Timeout\\": 60
      },
      \\"DependsOn\\": [
        \\"WebsiteVerifyDomainFunctionServiceRoleDefaultPolicy90A097B8\\",
        \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\"
      ]
    },
    \\"WebsiteVerifyDomainB2C2439A\\": {
      \\"Type\\": \\"AWS::CloudFormation::CustomResource\\",
      \\"Properties\\": {
        \\"ServiceToken\\": {
          \\"Fn::GetAtt\\": [
            \\"WebsiteVerifyDomainFunction9978DE02\\",
            \\"Arn\\"
          ]
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        },
        \\"DomainName\\": \\"mydomain.com\\",
        \\"CertificateArn\\": \\"null\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    }
  },
  \\"Parameters\\": {
    \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3Bucket383C9EC7\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93dee\\\\\\"\\"
    },
    \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3VersionKeyC0FEDEB4\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93dee\\\\\\"\\"
    },
    \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeArtifactHash2455E68C\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93dee\\\\\\"\\"
    }
  }
}"
`;

exports[`WebsiteConstruct synthetizes properly using certificateArn 1`] = `
"{
  \\"Resources\\": {
    \\"WebsiteHostedZoneD4FAEADF\\": {
      \\"Type\\": \\"AWS::Route53::HostedZone\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"HostedZoneConfig\\": {
          \\"Comment\\": \\"My nice website\\"
        }
      }
    },
    \\"WebsiteHostedZoneCaaAmazonF67E60BB\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"CAA\\",
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        },
        \\"ResourceRecords\\": [
          \\"0 issue \\\\\\"amazon.com\\\\\\"\\"
        ],
        \\"TTL\\": \\"1800\\"
      }
    },
    \\"WebsiteBucket4326D7C2\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"mydomain.com-website\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"WebsiteDistributionCFDistributionD4D90A52\\": {
      \\"Type\\": \\"AWS::CloudFront::Distribution\\",
      \\"Properties\\": {
        \\"DistributionConfig\\": {
          \\"Aliases\\": [
            \\"mydomain.com\\",
            \\"www.mydomain.com\\"
          ],
          \\"CustomErrorResponses\\": [
            {
              \\"ErrorCachingMinTTL\\": 300,
              \\"ErrorCode\\": 403,
              \\"ResponseCode\\": 200,
              \\"ResponsePagePath\\": \\"/index.html\\"
            },
            {
              \\"ErrorCachingMinTTL\\": 300,
              \\"ErrorCode\\": 404,
              \\"ResponseCode\\": 200,
              \\"ResponsePagePath\\": \\"/index.html\\"
            }
          ],
          \\"DefaultCacheBehavior\\": {
            \\"AllowedMethods\\": [
              \\"GET\\",
              \\"HEAD\\"
            ],
            \\"CachedMethods\\": [
              \\"GET\\",
              \\"HEAD\\"
            ],
            \\"Compress\\": true,
            \\"ForwardedValues\\": {
              \\"Cookies\\": {
                \\"Forward\\": \\"none\\"
              },
              \\"QueryString\\": false
            },
            \\"TargetOriginId\\": \\"origin1\\",
            \\"ViewerProtocolPolicy\\": \\"redirect-to-https\\"
          },
          \\"DefaultRootObject\\": \\"index.html\\",
          \\"Enabled\\": true,
          \\"HttpVersion\\": \\"http2\\",
          \\"IPV6Enabled\\": true,
          \\"Origins\\": [
            {
              \\"DomainName\\": {
                \\"Fn::GetAtt\\": [
                  \\"WebsiteBucket4326D7C2\\",
                  \\"RegionalDomainName\\"
                ]
              },
              \\"Id\\": \\"origin1\\",
              \\"S3OriginConfig\\": {}
            }
          ],
          \\"PriceClass\\": \\"PriceClass_All\\",
          \\"ViewerCertificate\\": {
            \\"AcmCertificateArn\\": \\"arn:aws:acm:REGION:ACCOUNT:certificate/12345-678-9012345\\",
            \\"SslSupportMethod\\": \\"sni-only\\"
          }
        }
      }
    },
    \\"WebsiteA6C1FD492\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"A\\",
        \\"AliasTarget\\": {
          \\"DNSName\\": {
            \\"Fn::GetAtt\\": [
              \\"WebsiteDistributionCFDistributionD4D90A52\\",
              \\"DomainName\\"
            ]
          },
          \\"HostedZoneId\\": \\"Z2FDTNDATAQYW2\\"
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        }
      }
    },
    \\"WebsiteAAAAA3AA9709\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"AAAA\\",
        \\"AliasTarget\\": {
          \\"DNSName\\": {
            \\"Fn::GetAtt\\": [
              \\"WebsiteDistributionCFDistributionD4D90A52\\",
              \\"DomainName\\"
            ]
          },
          \\"HostedZoneId\\": \\"Z2FDTNDATAQYW2\\"
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        }
      }
    },
    \\"WebsiteWWWE5086576\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"www.mydomain.com.\\",
        \\"Type\\": \\"A\\",
        \\"AliasTarget\\": {
          \\"DNSName\\": {
            \\"Fn::GetAtt\\": [
              \\"WebsiteDistributionCFDistributionD4D90A52\\",
              \\"DomainName\\"
            ]
          },
          \\"HostedZoneId\\": \\"Z2FDTNDATAQYW2\\"
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        }
      }
    },
    \\"WebsiteMX1A2D5733\\": {
      \\"Type\\": \\"AWS::Route53::RecordSet\\",
      \\"Properties\\": {
        \\"Name\\": \\"mydomain.com.\\",
        \\"Type\\": \\"MX\\",
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        },
        \\"ResourceRecords\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"10 inbound-smtp.\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\".amazonaws.com\\"
              ]
            ]
          }
        ],
        \\"TTL\\": \\"1800\\"
      }
    },
    \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"WebsiteVerifyDomainFunctionServiceRoleDefaultPolicy90A097B8\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"acm:DescribeCertificate\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:VerifyDomainIdentity\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:VerifyDomainDkim\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:GetIdentityVerificationAttributes\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:GetIdentityDkimAttributes\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:DeleteIdentity\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"route53:ChangeResourceRecordSets\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:aws:route53:::hostedzone/\\",
                    {
                      \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
                    }
                  ]
                ]
              }
            },
            {
              \\"Action\\": \\"route53:GetChange\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:aws:route53:::hostedzone/\\",
                    {
                      \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
                    }
                  ]
                ]
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"WebsiteVerifyDomainFunctionServiceRoleDefaultPolicy90A097B8\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\"
          }
        ]
      }
    },
    \\"WebsiteVerifyDomainFunction9978DE02\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3Bucket383C9EC7\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3VersionKeyC0FEDEB4\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3VersionKeyC0FEDEB4\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.verifyDomain\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs8.10\\",
        \\"Timeout\\": 60
      },
      \\"DependsOn\\": [
        \\"WebsiteVerifyDomainFunctionServiceRoleDefaultPolicy90A097B8\\",
        \\"WebsiteVerifyDomainFunctionServiceRole77BB87BB\\"
      ]
    },
    \\"WebsiteVerifyDomainB2C2439A\\": {
      \\"Type\\": \\"AWS::CloudFormation::CustomResource\\",
      \\"Properties\\": {
        \\"ServiceToken\\": {
          \\"Fn::GetAtt\\": [
            \\"WebsiteVerifyDomainFunction9978DE02\\",
            \\"Arn\\"
          ]
        },
        \\"HostedZoneId\\": {
          \\"Ref\\": \\"WebsiteHostedZoneD4FAEADF\\"
        },
        \\"DomainName\\": \\"mydomain.com\\",
        \\"CertificateArn\\": \\"arn:aws:acm:REGION:ACCOUNT:certificate/12345-678-9012345\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    }
  },
  \\"Parameters\\": {
    \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3Bucket383C9EC7\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93dee\\\\\\"\\"
    },
    \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeS3VersionKeyC0FEDEB4\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93dee\\\\\\"\\"
    },
    \\"AssetParameters6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93deeArtifactHash2455E68C\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"6582f20029dc28838c59832e29418e9c30fb4cdf39ee8850825b960348d93dee\\\\\\"\\"
    }
  },
  \\"Outputs\\": {
    \\"CloudFrontDistributionId\\": {
      \\"Value\\": {
        \\"Ref\\": \\"WebsiteDistributionCFDistributionD4D90A52\\"
      }
    }
  }
}"
`;
